--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "auto-zustand-selectors-hook": "^3.0.1",
     "jotai": "^2.16.0",
     "next": "16.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
